--- a/1020作業1-3.ipynb
+++ b/1020作業1-3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,13 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d35b3bad26b149e9af58f087350ddbf8",
+       "model_id": "9f5a2dd8846d4aa9a2f0d320a0ff1b7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,19 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ipywidgets as widgets\n",
-    "from ipywidgets import interact, interact_manual, fixed\n",
-    "from IPython.display import clear_output, display, YouTubeVideo\n",
-    "from random import choice"
+    "from IPython.display import clear_output, display, YouTubeVideo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,13 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a319a083e0d348e48fb2328d0765b112",
+       "model_id": "132225bd20e542c4b896b92d7e351580",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,19 +154,19 @@
     }
    ],
    "source": [
-    "button = widgets.Button(description='今天煮什麼呢？')\n",
-    "button.style.button_color = 'lightblue'\n",
-    "out = widgets.Output()\n",
+    "button1 = widgets.Button(description='今天煮什麼呢？')\n",
+    "button1.style.button_color = 'lightblue'\n",
+    "out1 = widgets.Output()\n",
     "\n",
-    "def button_clicked(_): \n",
+    "def button_click(_): \n",
     "    with out: \n",
     "        clear_output() \n",
-    "        shop = [recipe1, recipe2, recipe3, recipe4, recipe5, recipe6, recipe7]\n",
-    "        r_choice = choice(shop)\n",
+    "        recipe = [recipe1, recipe2, recipe3, recipe4, recipe5, recipe6, recipe7]\n",
+    "        r_choice = choice(recipe)\n",
     "        display(r_choice)\n",
     "             \n",
-    "button.on_click(button_clicked)\n",
-    "widgets.VBox([button,out])"
+    "button1.on_click(button_click)\n",
+    "widgets.VBox([button1,out1])"
    ]
   },
   {
