--- a/作業/剪刀、石頭、布.ipynb
+++ b/作業/剪刀、石頭、布.ipynb
@@ -1,12 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Python做剪刀、石頭、不"
+    "### Python做剪刀、石頭、布"
    ]
   },
   {
