--- a/Final Project/Youtube API Download.ipynb
+++ b/Final Project/Youtube API Download.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,15 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=589147579311-5hdc9glu0qcgc7n2ko1j6umon05l6jb4.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fyoutube.force-ssl&state=Eo8AXg0FQHNL13JZ9048At0fOFhFec&prompt=consent&access_type=offline\n",
-      "Enter the authorization code: 4/uwFnojtOR1pC3AUzziI_xY8U2QBpI-kKa_hoRFb8GyI8vfqwJOiUuCs\n"
+      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=589147579311-5hdc9glu0qcgc7n2ko1j6umon05l6jb4.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fyoutube.force-ssl&state=XaRfJNdNpOqWgmZkwFdGlm9Sve11kX&prompt=consent&access_type=offline\n",
+      "Enter the authorization code: 4/uwFvy9FWxJU7D6dPqr0S9fHSgt-9ToLjE9mhWI417HsK_fhXqpvw48o\n"
      ]
     }
    ],
@@ -68,97 +78,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download(url):\n",
+    "    driver = webdriver.Chrome(\"/Users/mandylee/Desktop/pyclass2019/chromedriver\")\n",
+    "    driver.get(url) \n",
+    "    driver.current_url\n",
+    "    driver.find_element_by_class_name(\"recorder-action\").click( )\n",
+    "    time.sleep(20)\n",
+    "    driver.quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "please type in the song you would like to add to playlist: everything I wanted\n"
+      "please type in the song you would like to download: mean it, christmas farm tree, dive\n",
+      "please type in the song you would like to download: end\n"
      ]
     }
    ],
    "source": [
-    "song = input(\"please type in the song you would like to add to playlist: \")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "song_content = request(song, client)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "v_id = song_content[\"items\"][0][\"id\"][\"videoId\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "song_link = f\"https://www.youtube.com/watch?v={v_id}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.youtube.com/watch?v=qCTMq7xvdXU'"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "song_link"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "please type in the song you would like to add to playlist: coastline\n",
-      "https://www.youtube.com/watch?v=DAE1NbKstqk\n",
-      "please type in the song you would like to add to playlist: christmas Tree farm\n",
-      "https://www.youtube.com/watch?v=mN3rDTAdM2o\n",
-      "please type in the song you would like to add to playlist: end\n"
-     ]
-    }
-   ],
-   "source": [
+    "url_list =[]\n",
     "while True:\n",
-    "    song = input(\"please type in the song you would like to add to playlist: \")\n",
+    "    song = input(\"please type in the song you would like to download: \")\n",
     "    if song == \"end\":\n",
     "        break\n",
-    "    song_content = request(song, client)\n",
-    "    v_id = song_content[\"items\"][0][\"id\"][\"videoId\"]\n",
-    "    song_link = f\"https://www.youtube.com/watch?v={v_id}\"\n",
-    "    print(song_link)"
+    "    else:\n",
+    "        song_list = song.split(',')   \n",
+    "    for i in song_list:\n",
+    "        song_content = request(i, client)\n",
+    "        v_id = song_content[\"items\"][0][\"id\"][\"videoId\"]\n",
+    "        youtube_url = \"https://www.yout.com/watch?v={}\".format(v_id)\n",
+    "        url_list.append(youtube_url)\n",
+    "    for i in url_list:\n",
+    "        download(i)\n",
+    "\n",
+    "\n",
+    "        \n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
